--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,16 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link text-white" href="#Home">Accueil</a>
+            <a class="nav-link text-white" href="#">Accueil</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="#Restaurants">Restaurants</a>
+            <a class="nav-link text-white" href="#">Restaurants</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="#MesCommandes">Mes commandes</a>
+            <a class="nav-link text-white" href="#">Mes commandes</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="#Panier">Panier</a>
+            <a class="nav-link text-white" href="#">Panier</a>
         </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -38,7 +38,7 @@
       </ul>
       <ul class="nav justify-content-end">
         <form class="form-inline">
-            <button class="btn btn-light text-dark mr-sm-2" type="button">Connexion</button>
+            <button class="btn btn-light text-dark mr-sm-2" type="button" routerLink="/connexion">Connexion</button>
             <button class="btn btn-light text-dark" type="button">Inscription</button>
         </form>
        </ul>
