--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,16 +23,11 @@
               Administration
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Tableau de bord</a>
+              <a class="dropdown-item" routerLink="/dashboard">Tableau de bord</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Ajouter un restaurant</a>
-              <a class="dropdown-item" href="#">Editer un restaurant</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Ajouter une carte</a>
-              <a class="dropdown-item" href="#">Editer une carte</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Ajouter un plat</a>
-              <a class="dropdown-item" href="#">Editer un plat</a>
+              <a class="dropdown-item" routerLink="/addRestaurant">Ajouter/Editer un restaurant</a>
+              <a class="dropdown-item" href="#">Ajouter/Editer une carte</a>
+              <a class="dropdown-item" href="#">Ajouter/Editer un plat</a>
             </div>
           </li>
       </ul>
