Fix: Ajout de l'attribut Adresse (Restaurant)

--- a/src/app/admin/admin-restaurants/admin-restaurants.component.html
+++ b/src/app/admin/admin-restaurants/admin-restaurants.component.html
@@ -26,6 +26,7 @@
                 <form [formGroup]="restaurantForm" (ngSubmit)="onSave()">
                     <div class="form-group">
                         <input type="text" formControlName="nom" id="nom" placeholder="Nom" class="form-control mb-2">
+                        <input type="text" formControlName="adresse" id="adresse" placeholder="Adresse" class="form-control mb-2">
                         <input type="text" formControlName="telephone" id="telephone" placeholder="Numéro de téléphone" class="form-control">
                     </div>
                     <div class="form-group">
