--- a/src/app/admin/admin-restaurants/admin-restaurants.component.html
+++ b/src/app/admin/admin-restaurants/admin-restaurants.component.html
@@ -2,19 +2,19 @@
     <div class="row">
         <div class="col-12 d-flex">
             <h2 class="font-weight-normal"><i class="fas fa-utensils"></i> Restaurants</h2>
-            <button class="btn btn-primary ml-auto" type="button" data-toggle="modal" data-target="#restaurantModal">
+            <button class="btn btn-primary ml-auto" type="button" data-toggle="modal" data-target="#restaurantModal" (click)="resetForm()">
                 <i class="fas fa-plus"></i>
             </button>
         </div>
     </div>
     <hr class="mt-1 mb-5 bg-dark">
     <div class="row">
-        <div *ngFor="let restaurant of restaurants" class="col-12 shadow-sm p-4 mb-3 bg-light">
+        <div *ngFor="let restaurant of restaurants; let i = index" class="col-12 shadow-sm p-4 mb-3 bg-light">
             <div class="row">
                 <h3 class="font-weight-normal pl-3">{{ restaurant.nom }}</h3>
                 <div class="ml-auto">
-                    <button class="btn btn-primary m-1"><i class="fas fa-edit"></i></button>
-                    <button class="btn btn-danger m-1"><i class="fas fa-trash-alt"></i></button>
+                    <button class="btn btn-primary m-1" (click)="onEdit(restaurant, i)"><i class="fas fa-edit"></i></button>
+                    <button class="btn btn-danger m-1" (click)="onDelete(restaurant)"><i class="fas fa-trash-alt"></i></button>
                 </div>
             </div>
             <p>{{ restaurant.adresse }}, {{ restaurant.telephone }}</p>
@@ -34,6 +34,7 @@
             </div>
             <div class="modal-body">
                 <form [formGroup]="restaurantForm" (ngSubmit)="onSave()">
+                    <input type="number" formControlName="id" hidden>
                     <div class="form-group">
                         <input type="text" formControlName="nom" id="nom" placeholder="Nom" class="form-control mb-2">
                         <input type="text" formControlName="adresse" id="adresse" placeholder="Adresse" class="form-control mb-2">
