--- a/src/app/restaurant-menu/restaurant-menu.component.html
+++ b/src/app/restaurant-menu/restaurant-menu.component.html
@@ -13,4 +13,24 @@
             <p class="font-weight-light">{{ restaurant.description }}</p>
         </div>
     </div>
+    <div class="row">
+        <div *ngFor="let plat of restaurant.plats; let ii = index" class="col-12 shadow-sm p-4 mb-3 bg-white">
+            <div class="row">
+                <div class="col-md-2">
+                    <img [src]="plat.img" alt="Plat img" style="width:100px" *ngIf="plat.img">
+                    <h4 class="font-weight-light" *ngIf="!restaurant.img">Pas de photo</h4>
+                </div>
+                <div class="col-md-10">
+                    <div class="row">
+                        <p class="font-weight-light pl-3">{{ plat.type }}</p>
+                        <p class="font-weight-normal pl-3">{{ plat.nom }}</p>
+                        <div class="ml-auto">
+                            <button class="btn btn-primary btn-lg m-1">{{ plat.prix }} <i class="fas fa-coins"></i></button>
+                        </div>
+                    </div>
+                    <p class="font-weight-light">{{ plat.description }}</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
