Système de prise de commande et de panier + sauvegarde du panier en base une fois validé

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,10 @@
             <a class="nav-link text-white" routerLink="/accueil">Restaurants</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="#">Ma commande</a>
+            <a class="nav-link text-white" routerLink="/panier">Panier</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="#">Mes commandes</a>
         </li>
         <li *ngIf="loggedAsAdmin" class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
