--- a/src/app/all-orders/all-orders.component.html
+++ b/src/app/all-orders/all-orders.component.html
@@ -30,7 +30,7 @@
             </tbody>
         </table>
         <div class="row">
-            <button *ngIf="!panier.done" (click)="finaliserCommande(panier)" class="btn btn-primary ml-auto">Confirmer</button>
+            <button *ngIf="!panier.done" (click)="finaliserCommande(panier)" class="btn btn-primary ml-auto mr-3">Confirmer</button>
         </div>
     </div>
 </body>
