--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,10 +21,10 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" routerLink="/dashboard">Tableau de bord</a>
+              <div class="dropdown-divider"></div>
               <a class="dropdown-item" routerLink="/allorders">Voir les commandes</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" routerLink="/editRestaurants">Ajouter/Editer un restaurant</a>
-              <a class="dropdown-item" href="#">Ajouter/Editer un plat</a>
             </div>
           </li>
       </ul>
